--- a/catalog.html
+++ b/catalog.html
@@ -24,6 +24,7 @@
    
    <main class="container">
     <h1 class="visually-hidden">Магазин готовых шаблонов</h1>
+      <!-- ну у нас же есть макет. на макете хлебных крошек нет -->
       <li class="breadcrumbs-current">?</li>
       
 
